# sipXhotdesk

./: .classpath  .project  CallCenterService.wsdl  Makefile.am  README  common.am  configure.ac  description  sipXhotdeskingTrigger.patch  sipxhotdesking.spec.in
config-plugin/: Makefile.am  sipxplugin.beans.xml
config-plugin/plugin/: HotdeskingMenu.html  HotdeskingPage.html  HotdeskingPage.page
config-plugin/src/org/sipfoundry/provisioning/taskfile/: HotdeskingApplicationEvent.java  HotdeskingCheckTaskTimer.java  HotdeskingFreeswitchExtensionProvider.java  HotdeskingFreeswitchExtensionProviderImpl.java  HotdeskingRule.java
config-plugin/src/org/sipfoundry/sipxconfig/sipxhotdesking/: SipXHotdesking.java  SipXHotdeskingConfig.java  SipXHotdeskingImpl.java  SipXHotdeskingSettings.java
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: HotdeskingMenu.java  HotdeskingPage.java
etc/: Makefile.am  hotdesking.cf  sipxhotdesking.properties  sipxhotdesking.xml
proxy-authplugin/: Hotdesking.cpp  Hotdesking.h  Makefile.am
rest-plugin/: Makefile.am
rest-plugin/lib/: Makefile.am
rest-plugin/src/: Makefile.am  applicationContext.xml  plugin.xml
rest-plugin/src/org/sipfoundry/callcenter/hotdesking/: CallcenterServiceImpl.java  HotdeskingTaskWriter.java  HotdeskingTriggerParams.java  HotdeskingTriggerPlugin.java  HotdeskingTriggerRestlet.java  HotdeskingTriggerService.java  HotdeskingTriggerSettings.java  OfficeServiceImpl.java  SipXDao.java  SipXDaoImpl.java
rest-plugin/src/org/sipfoundry/callcenter/hotdesking/exceptions/: PhoneNotFoundException.java  UserNotFoundException.java
src/: Makefile.am
src/main/: Makefile.am
src/main/java/: Makefile.am
src/main/java/org/sipfoundry/hotdesking/: AutoLogoff.java  Hotdesking.java  HotdeskingCode.properties  HotdeskingConfiguration.java  HotdeskingDigitCollect.java  HotdeskingHandler.java  HotdeskingServer.java  HotdeskingTask.java  HotdeskingUser.java  HotdeskingVoiceMenu.java  Md5Encoder.java  TaskFileWriter.java  hotdesking.beans.xml
src/main/java/org/sipfoundry/hotdesking/mongo/: HotdeskingPermissionManager.java  HotdeskingPhone.java  HotdeskingPhoneManager.java  mongo.beans.xml
src/wwwcontent/: Makefile.am  stdprompts
